Background Bug Fixes and About Section Changes
- Fixed background misalignment issue.
- Changed Item Type select field width.
- Changed the About tab page layout.

--- a/css/about_styles.css
+++ b/css/about_styles.css
@@ -3,15 +3,26 @@
 #about {
     position: relative;
 
-    width: 80%;
-    height: 100%;
+    width: 60%;
+    height: 90%;
 
     display: none;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: left;
+    align-items: center;
 }
 
 #about p {
-    display: flex;
+    position: relative;
+
+    max-height: 70%;
+    overflow-y: auto;
+
+    display: inline;
+    white-space: pre-wrap;
+}
+
+#about h1 {
+    position: relative;
+    font-size: max(5vw, 5vh);
 }
