--- a/css/calculator_styles.css
+++ b/css/calculator_styles.css
@@ -57,7 +57,7 @@
 }
 
 #grid-item-content-left label select {
-    width: 45%;
+    width: 30%;
     height: 2vh;
 }
 
@@ -65,7 +65,6 @@
     grid-area: main-right;
 
     padding: 1vw;
-    /* background-image: linear-gradient(to right, #35170300 10%, #3517035e); */
 
     display: flex;
     flex-direction: column;
@@ -105,7 +104,6 @@
 
     margin: 0 5vw;
     padding: 1vw;
-    /* background-image: linear-gradient(to right, #35170300, #3517035e 50%, #35170300); */
 
     display: flex;
     flex-direction: column;
