--- a/css/global_styles.css
+++ b/css/global_styles.css
@@ -81,7 +81,7 @@ input, select {
 
     top: 50%;
     left: 50%;
-    width: 100%;
+    width: 115%;
     height: 100%;
     min-height: 100vh;
     min-width: 177vh;
@@ -103,7 +103,8 @@ input, select {
     top: 0;
     background-color: black;
     z-index: 0;
-    filter: drop-shadow(0 0.5vh 1vw black);
+    box-shadow: 0 0.5vh 1vw black;
+    transform: scaleX(120%);
 }
 
 #navbar-layer-two {
@@ -152,7 +153,8 @@ input, select {
     height: 7vh;
     bottom: 0;
     z-index: 0;
-    filter: drop-shadow(0 -0.5vh 1vw black);
+    box-shadow: 0 0.5vh 1vw black;
+    transform: scaleX(120%);
 }
 
 #footer-layer-two {
